SDK Release 24 Mar 2022

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ file(GLOB EI_SDK "edge-impulse-sdk/porting/himax/*.cpp"
                  "CMSIS/DSP/Source/CommonTables/*.c"
                  "CMSIS/DSP/Source/TransformFunctions/*bit*.c")
 
+file(GLOB FW_SDK "firmware-sdk/jpeg/*.cpp"
+                  "firmware-sdk/at_base64_lib.cpp")
+
 file(GLOB TF "edge-impulse-sdk/tensorflow/lite/micro/*.cc"
              "edge-impulse-sdk/tensorflow/lite/micro/memory_planner/*.cc"
              "edge-impulse-sdk/tensorflow/lite/micro/kernels/*.cc"
@@ -31,9 +34,10 @@ file(GLOB TF "edge-impulse-sdk/tensorflow/lite/micro/*.cc"
              "tflite-model/*.cpp")
 
 file(GLOB DSP "edge-impulse-sdk/dsp/kissfft/*.cpp"
-            "edge-impulse-sdk/dsp/dct/*.cpp")
+            "edge-impulse-sdk/dsp/dct/*.cpp"
+            "edge-impulse-sdk/dsp/image/*.cpp")
 
-set(SOURCE_FILES ${EI_SDK} ${TF} ${DSP})
+set(SOURCE_FILES ${EI_SDK} ${FW_SDK} ${TF} ${DSP})
 
 # include directories
 include_directories(./)
@@ -43,6 +47,7 @@ include_directories(edge-impulse-sdk/porting)
 include_directories(edge-impulse-sdk/dsp)
 include_directories(edge-impulse-sdk/dsp/kissfft)
 include_directories(edge-impulse-sdk/dsp/dct)
+include_directories(edge-impulse-sdk/dsp/image)
 include_directories(edge-impulse-sdk/third_party/flatbuffers/include/)
 include_directories(edge-impulse-sdk/third_party/gemmlowp)
 include_directories(edge-impulse-sdk/third_party/ruy)
@@ -56,6 +61,8 @@ include_directories(repl)
 include_directories(sensors)
 include_directories(QCBOR/inc)
 include_directories(mbedtls_hmac_sha256_sw)
+include_directories(firwmare-sdk)
+include_directories(firwmare-sdk/jpeg)
 
 
 # add the executable
